Fix wrong color variable.

--- a/css/main.less
+++ b/css/main.less
@@ -119,7 +119,7 @@ body.home #wrapper .row>.span9 {
 body:not(.home) .span9 {
   margin-top: 12px;
   margin-bottom: 36px;
-  background-color: @fefefe;
+  background-color: #fefefe;
   border-radius: 4px;
   -webkit-box-shadow: 0 2px 6px -5px #000;
   -moz-box-shadow: 0 2px 6px -5px #000;
